# rtwlib

./: .gitignore  Cargo.toml  LICENSE  README.md  test.ppm
.github/workflows/: rust.yml  rust2.yml  rust_publish.yml  rust_publish_dry.yml
src/: camera.rs  color.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  utils.rs  vec3.rs
src/examples/: simplescene.rs
src/hittable/: mod.rs  plane.rs  sphere.rs
