[package]
name = "rtwlib"
version = "0.1.4"
edition = "2021"
authors = ["jamdotjar"]
description = "Raytracing library built in rust"
license = "MIT"
path = "src/lib.rs"
repository = "https://github.com/jamdotjar/rtwlib"
keywords = ["raytracing", "graphics", "tui"]
categories = ["rendering"]


[lib]
name = "rtwlib"
version = "0.1.4"

[dependencies]
rand = "0.8.5"

